--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-beauty-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Vue Beauty Backend",
   "main": "index.js",
   "scripts": {
