--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://root:WruLIJvmKUYgjzsT@cluster0.nhkrg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://root:WruLIJvmKUYgjzsT@cluster0.nhkrg.mongodb.net/vue-beauty?retryWrites=true&w=majority&appName=Cluster0
