--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
+    "seed:import": "node data/seed.js --import",
+    "seed:clear": "node data/seed.js --clear",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gsus",
