--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://root:WruLIJvmKUYgjzsT@cluster0.nhkrg.mongodb.net/vue-beauty?retryWrites=true&w=majority&appName=Cluster0
+FRONTEND_URL=http://localhost:5173
