--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js",
+    "backend:dev": "node --watch index.js",
     "dev:postman": "node --watch index.js --postman",
     "seed:import": "node data/seed.js --import",
     "seed:clear": "node data/seed.js --clear",
