--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "backend:dev": "node --watch index.js",
-    "dev:postman": "node --watch index.js --postman",
+    "backend:dev:postman": "node --watch index.js --postman",
     "seed:import": "node data/seed.js --import",
     "seed:clear": "node data/seed.js --clear",
     "test": "echo \"Error: no test specified\" && exit 1"
