Start adding auth routes/model/controllers

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 MONGO_URI=mongodb+srv://root:WruLIJvmKUYgjzsT@cluster0.nhkrg.mongodb.net/vue-beauty?retryWrites=true&w=majority&appName=Cluster0
 FRONTEND_URL=http://localhost:5173
+MAILTRAP_SMTP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_SMTP_PORT=2525
+MAILTRAP_SMTP_AUTH_USER=ca68e19b0dee64
+MAILTRAP_SMTP_AUTH_PASSWORD=3648aef9eab398
