--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/themes": "^1.6.7",
+    "@formkit/vue": "^1.6.7",
     "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
