--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ MAILTRAP_SMTP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_SMTP_PORT=2525
 MAILTRAP_SMTP_AUTH_USER=ca68e19b0dee64
 MAILTRAP_SMTP_AUTH_PASSWORD=3648aef9eab398
+JWT_SECRET=secret
